--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ __pycache__/main.cpython-39.pyc
 __pycache__/mst.cpython-39.pyc
 __pycache__/solutions.cpython-39.pyc
 __pycache__/ui.cpython-39.pyc
+build/
+venv/
