--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 altgraph==0.17.3
 pefile==2023.2.7
 pygame==2.4.0
+pygame-ce==2.2.1
 pyinstaller==5.11.0
 pyinstaller-hooks-contrib==2023.3
 pywin32-ctypes==0.2.0
